scripts/nullaway/nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8.txt
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/color/GradientColorFactory.java:35: error: [NullAway] parameter index is @NonNull, but parameter in superclass method org.patchca.color.ColorFactory.getColor(int) is @Nullable
    public Color getColor(int index) {
                              ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/SimpleCaptchaService.java:55: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:31: error: [NullAway] @NonNull field fontFactory not initialized
    protected FontFactory fontFactory;
                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:33: error: [NullAway] @NonNull field wordFactory not initialized
    protected WordFactory wordFactory;
                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:35: error: [NullAway] @NonNull field colorFactory not initialized
    protected ColorFactory colorFactory;
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:37: error: [NullAway] @NonNull field backgroundFactory not initialized
    protected BackgroundFactory backgroundFactory;
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:39: error: [NullAway] @NonNull field textRenderer not initialized
    protected TextRenderer textRenderer;
                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:41: error: [NullAway] @NonNull field filterFactory not initialized
    protected FilterFactory filterFactory;
                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/RandomYBestFitTextRenderer.java:26: error: [NullAway] parameter width is @NonNull, but parameter in superclass method org.patchca.text.renderer.AbstractTextRenderer.arrangeCharacters(int,int,org.patchca.text.renderer.TextString) is @Nullable
    protected void arrangeCharacters(int width, int height, TextString ts) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/TextCharacter.java:42: error: [NullAway] @NonNull field font not initialized
    private Font font;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/TextCharacter.java:44: error: [NullAway] @NonNull field color not initialized
    private Color color;
                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/BestFitTextRenderer.java:24: error: [NullAway] parameter width is @NonNull, but parameter in superclass method org.patchca.text.renderer.AbstractTextRenderer.arrangeCharacters(int,int,org.patchca.text.renderer.TextString) is @Nullable
    protected void arrangeCharacters(int width, int height, TextString ts) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/SimpleTextRenderer.java:24: error: [NullAway] parameter width is @NonNull, but parameter in superclass method org.patchca.text.renderer.AbstractTextRenderer.arrangeCharacters(int,int,org.patchca.text.renderer.TextString) is @Nullable
    protected void arrangeCharacters(int width, int height, TextString ts) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/ConfigurableFilterFactory.java:26: error: [NullAway] @NonNull field filters not initialized
    private List<BufferedImageOp> filters;
                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/AbstractConvolveImageOp.java:30: error: [NullAway] parameter inPixels is @NonNull, but parameter in superclass method org.patchca.filter.library.AbstractImageOp.filter(int[],int[],int,int) is @Nullable
    protected void filter(int[] inPixels, int[] outPixels, int width, int height) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/AbstractImageOp.java:39: error: [NullAway] @NonNull field hints not initialized
    protected RenderingHints hints;
                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/AbstractImageOp.java:132: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            dest = createCompatibleDestImage(src, null);
                                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/WobbleImageOp.java:99: error: [NullAway] parameter x is @NonNull, but parameter in superclass method org.patchca.filter.library.AbstractTransformImageOp.transform(int,int,double[]) is @Nullable
    protected void transform(int x, int y, double[] t) {
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/AbstractTransformImageOp.java:35: error: [NullAway] parameter inPixels is @NonNull, but parameter in superclass method org.patchca.filter.library.AbstractImageOp.filter(int[],int[],int,int) is @Nullable
    protected void filter(int[] inPixels, int[] outPixels, int width, int height) {
                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/CurvesImageOp.java:76: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            dest = createCompatibleDestImage(src, null);
                                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/DiffuseImageOp.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields tx (line 25), ty (line 27) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DiffuseImageOp() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/DiffuseImageOp.java:55: error: [NullAway] parameter x is @NonNull, but parameter in superclass method org.patchca.filter.library.AbstractTransformImageOp.transform(int,int,double[]) is @Nullable
    protected void transform(int x, int y, double[] t) {
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/RippleImageOp.java:77: error: [NullAway] parameter x is @NonNull, but parameter in superclass method org.patchca.filter.library.AbstractTransformImageOp.transform(int,int,double[]) is @Nullable
    protected void transform(int x, int y, double[] t) {
                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/MarbleImageOp.java:37: error: [NullAway] initializer method does not guarantee @NonNull fields tx (line 29), ty (line 31) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MarbleImageOp() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/MarbleImageOp.java:81: error: [NullAway] parameter x is @NonNull, but parameter in superclass method org.patchca.filter.library.AbstractTransformImageOp.transform(int,int,double[]) is @Nullable
    protected void transform(int x, int y, double[] t) {
                                 ^
    (see http://t.uber.com/nullaway )
25 errors
